# sitemix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-homebrew.yml  release-pypi.yml
docs/: design.md  first_prompt.md  format.md  issues.md  politeness.md  roadmap.md  spec.md  tasks.md
packaging/homebrew/: sitemix.rb
scripts/: render_homebrew_formula.py
src/sitemix/: __init__.py  __main__.py  cli.py  crawl.py  extract.py  formatters.py  http.py  schemas.py  utils.py
tests/: test_cli.py  test_extract.py  test_formatters.py  test_http_client.py  test_sitemap.py  test_urls.py
