[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitemix"
version = "0.1.0"
description = "Opinionated CLI wrapper around trafilatura for LLM-oriented webpage/site dumps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sitemix maintainers" }]
keywords = ["llm", "web extraction", "trafilatura", "cli", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]
dependencies = [
  "trafilatura>=1.8.0,<2",
  "typer>=0.12.0,<1",
  "pydantic>=2.6.0,<3",
  "rich>=13.7.0,<14",
  "requests>=2.31.0,<3",
]

[project.urls]
Homepage = "https://github.com/<org>/sitemix"
Repository = "https://github.com/<org>/sitemix"
Issues = "https://github.com/<org>/sitemix/issues"

[project.scripts]
sitemix = "sitemix.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9",
  "responses>=0.25.0,<0.26",
  "ruff>=0.11.0,<0.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
